# RepoPilot

./: .env.example  .gitignore  CLAUDE.md  README.md  pyproject.toml
docs/: design-codex.md  design.md
src/repopilot/: config.py  main.py
src/repopilot/agent/: analysis_agent.py  prompts.py  tools.py
src/repopilot/analysis/: grading.py  models.py  repository.py  schemas.py  service.py
src/repopilot/cli/: app.py  report.py
src/repopilot/database/: chroma.py  sqlite.py
src/repopilot/github/: schemas.py  service.py
src/repopilot/rag/: service.py  vectorstore.py
src/repopilot/utils/: logger.py  path_tool.py
