[project]
name = "repopilot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiosqlite>=0.22.1",
    "chromadb>=1.5.8",
    "fastapi>=0.136.1",
    "jinja2>=3.1.6",
    "langchain>=1.2.15",
    "pygithub>=2.9.1",
    "rich>=15.0.0",
    "sqlalchemy>=2.0.49",
    "typer>=0.24.2",
]
