[project]
name = "repopilot"
version = "0.1.0"
description = "GitHub repository intelligent analysis assistant"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiosqlite>=0.22.1",
    "chromadb>=1.5.8",
    "fastapi>=0.136.1",
    "jinja2>=3.1.6",
    "langchain>=1.2.15",
    "langchain-openai>=1.2.0",
    "langchain-text-splitters>=1.1.2",
    "pydantic-settings>=2.14.0",
    "pygithub>=2.9.1",
    "python-dotenv>=1.2.2",
    "rich>=15.0.0",
    "sqlalchemy>=2.0.49",
    "typer>=0.24.2",
]

[project.scripts]
repopilot = "repopilot.main:app"

[tool.setuptools.packages.find]
where = ["src"]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
